hphp/hack/test/typecheck/primitive_casing.php
<?hh

function f(Vec $arr): String {
  return 's';
}
